<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Event</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_add">Add</string>
    <string name="main_list">List</string>
    <string name="title_activity_add_edit">AddEditActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="add_label_name">Name</string>
    <string name="add_hint_name">Event name</string>
    <string name="add_hint_description">Description</string>
    <string name="add_hint_place">Place</string>
    <string name="add_label_date">Date</string>
    <string name="add_label_time">Time</string>
    <string name="add_label_description">Description</string>
    <string name="add_label_place">Place</string>
    <string name="add_label_amount">Amount</string>
    <string name="add_button_save">Save</string>
    <string name="list_label_all">All event</string>
    <string name="add_hint_amount">0.0</string>
    <string name="add_button_delete">Delete</string>
    <string name="main_dropDB">Clean data</string>

</resources>
