<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddEditActivity" >

    <TextView
        android:id="@+id/add_label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/add_label_name" />

    <EditText
        android:id="@+id/add_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_hint_name"
        android:layout_alignLeft="@+id/add_label_name"
        android:layout_below="@+id/add_label_name"
        android:ems="10" >

    </EditText>

    <TextView
        android:id="@+id/add_label_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_input_name"
        android:layout_below="@+id/add_input_name"
        android:text="@string/add_label_date" />

    <EditText
        android:id="@+id/add_input_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_hint_date"
        android:layout_alignLeft="@+id/add_label_date"
        android:layout_below="@+id/add_label_date"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/add_label_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_input_date"
        android:layout_below="@+id/add_input_date"
        android:text="@string/add_label_time" />

    <EditText
        android:id="@+id/add_input_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_hint_time"
        android:layout_alignLeft="@+id/add_label_time"
        android:layout_below="@+id/add_label_time"
        android:ems="10" />

    <TextView
        android:id="@+id/add_label_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_input_time"
        android:layout_below="@+id/add_input_time"
        android:text="@string/add_label_description" />

    <EditText
        android:id="@+id/add_input_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_hint_description"
        android:layout_alignLeft="@+id/add_label_description"
        android:layout_below="@+id/add_label_description"
        android:ems="10" />

    <TextView
        android:id="@+id/add_label_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_input_description"
        android:layout_below="@+id/add_input_description"
        android:text="@string/add_label_place" />

    <EditText
        android:id="@+id/add_input_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_hint_place"
        android:layout_alignLeft="@+id/add_label_place"
        android:layout_below="@+id/add_label_place"
        android:ems="10" />

    <TextView
        android:id="@+id/add_label_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_input_place"
        android:layout_below="@+id/add_input_place"
        android:text="@string/add_label_amount" />

    <EditText
        android:id="@+id/add_input_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_label_amount"
        android:layout_below="@+id/add_label_amount"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/add_button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_input_amount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/add_button_save"
        android:onClick="insertDB" />

</RelativeLayout>
